update: hibernate ejercicio 1