@@ -1,10 +1,12 @@
 package es.cursojava.oo.hibernate.ejercicios.ejercicio1.main;
 
-import java.util.Arrays;
-import java.util.Calendar;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 
 import es.cursojava.oo.hibernate.ejercicios.ejercicio1.Curso;
+import es.cursojava.utils.HibernateUtils;
 import es.cursojava.utils.interfaces.Iniciable;
 
 public class Main implements Iniciable {
@@ -23,48 +25,52 @@ public class Main implements Iniciable {
 	
 	public List<Curso> crearCursos() {
 		Curso c1 = new Curso(
-				7811, 
-				"Matemáticas Avanzadas", 
-				"adsfas", 
-				600, 
-				true, 
-				"Avanzado", 
-				"Álgebra", 
-		);
-		
+			    1, 101, "Java Básico", "Introducción a Java",
+			    40, true, "Inicial", "Programación",
+			    120.0, LocalDate.now(), LocalDate.now().plusMonths(1),
+			    LocalDateTime.now()
+			);
+
 		Curso c2 = new Curso(
-				2542, 
-				"Programación Orientada a Objetos", 
-				"asdwwwr", 
-				670,
-				true, 
+			    2, "Spring Boot Avanzado", "Spring Boot con microservicios",
+			    60, true, "Avanzado", "Backend",
+			    220.0, LocalDate.now().plusDays(10), LocalDate.now().plusMonths(2),
+			    LocalDateTime.now()
 		);
-		
+
 		Curso c3 = new Curso(
-				3369, 
-				"Cocina Italiana", 
-				"rwerwes", 
-				200, 
-				false, 
-				"Básico", 
+			    3, 303, "Bases de Datos", "Fundamentos de SQL y modelado",
+			    50, false,
+			    LocalDateTime.now()
 		);
-		
+
 		Curso c4 = new Curso(
-				6767, 
-				"Conducción de Transporte Público", 
-				"xcwqwea", 
-				480, 
-				false,
+			    4, "Angular Profesional", "Frontend avanzado con Angular",
+			    80, true, "Intermedio", "Frontend",
+			    250.0, LocalDate.now(), LocalDate.now().plusMonths(3),
+			    LocalDateTime.now()
 		);
-		
-		List<Curso> cursos = Arrays.asList(c1, c2, c3, c4);
+		List<Curso> cursos = new ArrayList<>(List.of(c1, c2, c3, c4));
+		return cursos;
+	}
+	
+	public void insertarCursos(List<Curso> cursos) {
+		for (Curso curso : cursos) {
+			HibernateUtils.insert(curso);
+		}
 	}
 	
 	public void imprimirCursos(List<Curso> cursos) {
-		
+		for (Curso curso : cursos) {
+			System.out.println(curso);
+		}
 	}
 	
 	public void imprimirCursosActivos(List<Curso> cursos) {
-		
+		for (Curso curso : cursos) {
+			if(curso.isActivo()) {
+				System.out.println(curso);
+			}
+		}
 	}
 }
